<resources>
    <string name="app_name">My Events List</string>
    <string name="preference_name">Preferencias</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_perfil">Perfil</string>
    <string name="perfil_description_header">Background con color corporativo</string>
    <string name="perfil_imagen">Foto de perfil del usuario</string>
    <string name="perfil_btn_edit">Botón para guardar los cambios en el perfil</string>
    <string name="perfil_text_name">Nombre</string>
    <string name="perfil_text_email">Email</string>
    <string name="perfil_text_psw">Contraseña</string>
    <string name="perfil_text_phone">Teléfono</string>
    <string name="title_activity_maps">Localización del evento</string>
    <string name="title_activity_ayuda">Ayuda</string>
    <string name="ayuda_lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur porttitor molestie aliquet. Nam tempor fringilla quam. Donec dapibus lectus eget diam fringilla maximus. Praesent sapien neque, ultricies malesuada gravida aliquet, mattis sed felis. Mauris dictum ipsum non nulla aliquet semper. Donec sed efficitur tortor. Interdum et malesuada fames ac ante ipsum primis in faucibus. Praesent a ultricies est, in porttitor ligula. Nullam feugiat ullamcorper tincidunt. Fusce vitae lorem accumsan, sagittis sapien id, auctor nisi. Fusce pellentesque, arcu eu vehicula dapibus, nisi massa iaculis lectus, et cursus erat elit in lacus. Ut vel ullamcorper erat.</string>
    <string name="ayuda_lorem_ipsum2">Sed nec neque id purus lacinia consectetur vel eget ligula. Aliquam auctor pharetra augue ac sodales. Sed ante mauris, consequat eu leo et, lacinia feugiat sapien. Proin a ornare ex. Ut consequat tellus id est condimentum feugiat. Pellentesque non arcu ac tortor iaculis ultrices ut at diam. Morbi varius elit quis ex tristique rhoncus. Aenean ut felis pharetra felis facilisis lobortis ac in nisi.</string>
    <string name="ayuda_lorem_ipsum3">Nullam vel nibh viverra ex dignissim dignissim. Sed quis elit non velit feugiat congue eu a sapien. Duis porttitor elementum nisl, id luctus tellus aliquam id. Praesent risus dui, maximus faucibus odio in, tincidunt pharetra elit. Nulla quis lobortis nisi, a mattis neque. Integer eget ipsum nisl. Praesent gravida, ante auctor consectetur dapibus, erat nisi maximus nisl, finibus lobortis metus velit ac odio. Quisque eu porttitor elit. Proin rhoncus a tortor sed ornare. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</string>
    <string name="ayuda_lorem_ipsum4">Nam libero metus, accumsan a leo non, porttitor imperdiet ipsum. Nunc volutpat nunc nec efficitur ullamcorper. Suspendisse lacus nisi, tincidunt et nulla euismod, porttitor viverra eros. In varius risus sit amet leo vehicula suscipit. Nulla luctus placerat eros. Proin rhoncus ultrices risus vitae tristique. Mauris non commodo leo. Curabitur dictum urna ligula, id ullamcorper purus eleifend sit amet.</string>
    <string name="ayuda_lorem_ipsum5">In blandit metus a leo vulputate sollicitudin. Phasellus ac felis id ligula gravida tincidunt nec non justo. Integer sodales odio eget risus cursus, ac facilisis augue placerat. Integer feugiat bibendum suscipit. Sed at ex tincidunt, eleifend magna ac, malesuada est. Morbi lobortis purus quis laoreet pretium. Nam nec erat urna. Nulla nec urna ut ex porta lacinia nec a mi. Aenean rutrum iaculis consequat. Ut eleifend lorem quis dolor fermentum pretium. Ut imperdiet eu enim viverra luctus. Ut auctor nec odio in eleifend. Curabitur eget magna vel mi volutpat aliquam eget in lacus. Quisque feugiat purus at metus malesuada condimentum.</string>
    <string name="title_activity_nueva_cita">Ayuda</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_evento">Evento</string>
</resources>