<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AyudaActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/paragraph1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ayuda_lorem_ipsum" />

        <TextView
            android:id="@+id/paragraph2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/ayuda_lorem_ipsum2"
            app:layout_constraintTop_toBottomOf="@+id/paragraph1" />

        <TextView
            android:id="@+id/paragraph3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/ayuda_lorem_ipsum3"
            app:layout_constraintTop_toBottomOf="@+id/paragraph2" />

        <TextView
            android:id="@+id/paragraph4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ayuda_lorem_ipsum4"
            app:layout_constraintTop_toBottomOf="@+id/paragraph3" />

        <TextView
            android:id="@+id/paragraph5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ayuda_lorem_ipsum5"
            app:layout_constraintTop_toBottomOf="@+id/paragraph4" />
    </LinearLayout>
</ScrollView>
