<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layout">


        <ImageView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/profile"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="0dp"
            android:clickable="true"
            android:contentDescription="@string/perfil_imagen"
            android:elevation="5dp"
            android:focusable="true"
            android:padding="20dp"
            android:scaleType="centerCrop"
            android:src="@drawable/nouser"
            android:visibility="visible"
            app:srcCompat="@drawable/nouser" />

        <RelativeLayout
            android:id="@+id/profile_layout"
            android:layout_width="match_parent"
            android:layout_height="320dp"
            android:layout_marginTop="-30dp"
            android:background="@drawable/header"
            android:elevation="4dp"
            android:paddingBottom="24dp">


            <ImageView
                android:id="@+id/edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="50dp"
                android:layout_marginRight="16dp"
                android:clickable="true"
                android:contentDescription="@string/perfil_btn_edit"
                android:focusable="true"
                android:src="@android:drawable/ic_menu_edit" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="225dp"
                android:text="@string/perfil_text_name"
                android:textColor="#fff"
                android:textSize="24sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <include
            layout="@layout/content_perfil"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/profile_layout" />
    </RelativeLayout>
</ScrollView>