<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".PerfilActivity"
    tools:showIn="@layout/activity_perfil">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/profile_layout"
        android:background="#fff"
        android:elevation="4dp"
        android:orientation="vertical"
        android:paddingLeft="5dp"
        android:paddingTop="20dp"
        android:paddingRight="5dp"
        android:paddingBottom="20dp">

        <TextView
            android:id="@+id/textEmail"
            android:layout_width="match_parent"
            android:layout_height="18dp"
            android:layout_margin="5dp"
            android:layout_marginStart="124dp"
            android:clickable="true"
            android:text="@string/perfil_text_email"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="@+id/editTextName"
            tools:layout_editor_absoluteY="86dp"
            android:focusable="true" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/perfil_text_email"
            android:importantForAutofill="no"
            android:inputType="textWebEmailAddress"
            android:maxLines="1"
            android:singleLine="true"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/textEmail"
            tools:layout_editor_absoluteY="112dp" tools:targetApi="o" />

        <TextView
            android:id="@+id/textPws"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_margin="5dp"
            android:layout_marginStart="4dp"
            android:clickable="true"
            android:text="@string/perfil_text_psw"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:focusable="true" />

        <EditText
            android:id="@+id/editTextPws"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/perfil_text_psw"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:singleLine="true"
            android:textSize="12sp"
            tools:layout_editor_absoluteX="10dp"
            tools:layout_editor_absoluteY="45dp" tools:targetApi="o" />

        <TextView
            android:id="@+id/textName"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_margin="5dp"
            android:layout_marginStart="4dp"
            android:clickable="true"
            android:text="@string/perfil_text_name"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:focusable="true" />

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/perfil_text_name"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:singleLine="true"
            android:textSize="12sp"
            tools:layout_editor_absoluteX="10dp"
            tools:layout_editor_absoluteY="45dp" tools:targetApi="o" />

        <TextView
            android:id="@+id/textPhone"
            android:layout_width="match_parent"
            android:layout_height="18dp"
            android:layout_margin="5dp"
            android:clickable="true"
            android:text="@string/perfil_text_phone"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            tools:layout_editor_absoluteY="153dp"
            android:focusable="true" />

        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/perfil_text_phone"
            android:importantForAutofill="no"
            android:inputType="phone"
            android:maxLines="1"
            android:singleLine="true"
            android:textSize="12sp"
            tools:layout_editor_absoluteY="191dp" tools:targetApi="o"/>

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>